--- a/src/app/shared-module/components/header/header.component.html
+++ b/src/app/shared-module/components/header/header.component.html
@@ -2,7 +2,7 @@
   <ion-toolbar color="dark">
     <ul class="header">
       <li class="logo">
-        <ion-img class="logo-img" src="/assets/icon/favicon.webp"></ion-img>
+        <ion-img class="logo-img" src="assets/icon/favicon.webp"></ion-img>
         <ion-title class="fw-bold title">Angular Basics</ion-title>
       </li>
       <li *ngFor="let headerItem of headerItems" class="ion-hide-md-down">
