Reduced side menu width

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <app-header></app-header>
   <ion-split-pane contentId="main">
     <!-- Side Menu -->
-    <ion-menu contentId="main">
+    <ion-menu contentId="main" class="side-menu">
       <!-- Header -->
       <ion-header>
         <app-side-menu-header></app-side-menu-header>
