Added Card compoent with Input

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <app-header></app-header>
   <ion-split-pane contentId="main">
     <!-- Side Menu -->
-    <ion-menu contentId="main" class="side-menu">
+    <ion-menu contentId="main">
       <!-- Header -->
       <ion-header>
         <app-side-menu-header></app-side-menu-header>
@@ -15,6 +15,8 @@
     </ion-menu>
 
     <!-- Main Content -->
-    <ion-router-outlet id="main"></ion-router-outlet>
+    <ion-content id="main" class="main-content">
+      <ion-router-outlet></ion-router-outlet>
+    </ion-content>
   </ion-split-pane>
 </ion-app>
