--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,28 +1,27 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>
-      Start with Ionic
-      <a
-        target="_blank"
-        rel="noopener noreferrer"
-        href="https://ionicframework.com/docs/components"
-        >UI Components</a
-      >
-    </p>
-  </div>
-</ion-content>
+<ion-grid class="ion-no-margin">
+  <ion-row>
+    <ion-col>
+      <ion-text class="bold">Introduction to the Angular </ion-text>
+    </ion-col>
+  </ion-row>
+  <ion-row>
+    <ion-col>
+      <p>
+        Angular is an application design framework and development platform for
+        creating efficient and sophisticated single-page apps.
+      </p>
+    </ion-col>
+  </ion-row>
+  <ion-row>
+    <ion-col>
+      <ion-list class="cards-container">
+        <app-card
+          *ngFor="let cardItem of cardItems"
+          title="{{cardItem.title}}"
+          description="{{cardItem.description}}"
+          buttonLabel="{{cardItem.buttonLabel}}"
+        ></app-card>
+      </ion-list>
+    </ion-col>
+  </ion-row>
+</ion-grid>
