--- a/src/app/shared-module/components/side-menu/header/header.component.html
+++ b/src/app/shared-module/components/side-menu/header/header.component.html
@@ -1,3 +1,3 @@
 <ion-toolbar color="primary">
-  <ion-title class="fw-bold">Angular Basics</ion-title>
+  <ion-title class="bold">Angular Basics</ion-title>
 </ion-toolbar>
