--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -77,7 +77,18 @@
 
   // Common
   --font-weight-bold: bold;
+
+  // Main Content.
+  --main-content-offset-top: -60px !important;
 }
+
+// Tablet & Above
+/* Media Query - Variable Updates for Tablet */
+/* Ionic - md */
+// @media (min-width: 768px) {
+//   :root {
+//   }
+// }
 
 @media (prefers-color-scheme: dark) {
   /*
