--- a/src/common.scss
+++ b/src/common.scss
@@ -2,3 +2,11 @@
 .bold {
   font-weight: var(--font-weight-bold);
 }
+
+.border-bottom {
+  border-bottom: 1px solid #b3b3b3;
+}
+
+.ion-page {
+  overflow: scroll;
+}
